syntax = "proto3";

package com.road.yishi.proto.simple;

message SimplePlayerSearchRspMsg {
  string info = 1;
}
